# fract-ol

./: CMakeLists.txt  Makefile  fract-ol
include/: fract-ol.h
includes/: fract-ol.h
minilibx/: configure
src/: main.c
